--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
-.App {
-  text-align: center;
+.mainpage {
+  display: flex;
+  height: 100vh;
+}
+.mainContent {
+  width: 840px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.userContent,
+.storeContent {
+  flex: 1 0 auto;
+  background: gray;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.myMoney {
+  display: flex;
+  align-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.myMoney img {
+  width: 90px;
+  margin: 20px;
+}
+.myMoney p {
+  font-size: 40px;
+  font-weight: bold;
+}
+
+.touchCards {
+  display: flex;
+}
+
+.card {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 20px;
+  padding: 20px;
+  border: 1px solid black;
+  border-radius: 10px;
+}
+
+.card:hover {
+  cursor: pointer;
+  background-color: gray;
+}
+
+.card img {
+  width: 100px;
+}
+.layout {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.row {
+  display: flex;
+  margin: 20px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.row button {
+  padding: 10px;
+  margin: 10px 20px;
 }
