--- a/src/App.css
+++ b/src/App.css
@@ -67,3 +67,18 @@
   padding: 10px;
   margin: 10px 20px;
 }
+
+.ranking {
+  width: 140px;
+}
+
+.idontkonwo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-contents: space-between;
+  width: 100%;
+}
+.idontkonwo * {
+  margin: 30px 10px;
+}
