--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+.flex {
+  display: flex;
+}
 .mainpage {
   display: flex;
   height: 100vh;
@@ -46,7 +49,7 @@
 
 .card:hover {
   cursor: pointer;
-  background-color: gray;
+  background-color: #ababab;
 }
 
 .card img {
@@ -81,4 +84,38 @@
 }
 .idontkonwo * {
   margin: 30px 10px;
+}
+
+.storeContent {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  align-items: center;
+}
+.storeContent img {
+  width: 100px;
+  height: 100px;
+}
+
+.itemList img {
+  width: 70px;
+  height: 70px;
+  padding: 0 20px 0 0;
+}
+.imgList {
+  display: flex;
+}
+
+.item {
+  display: flex;
+  align-items: center;
+  padding: 15px 20px;
+  background-color: white;
+  border-radius: 8px;
+  margin: 30px 0;
+}
+
+.item:hover {
+  background-color: #ababab;
+  cursor: pointer;
 }
